--- a/application_page.css
+++ b/application_page.css
@@ -1,3 +1,19 @@
 body {
     background-color: lightblue;
 }
+h1 {
+    color: white;
+    text-align: center;
+}
+button {
+  background-color: lightblue;
+  color: white;
+}
+img {
+    border-radius: 8px;
+    max-width: 100%;
+    height: auto;
+}
+div .panel {
+  background-color: pink
+}
