application_page new font

--- a/application_page.css
+++ b/application_page.css
@@ -4,6 +4,8 @@ body {
 h1 {
     color: white;
     text-align: center;
+    font-family: Comic 
+    font-weight: bold;
 }
 button {
   background-color: lightblue;
