--- a/application_page.css
+++ b/application_page.css
@@ -1,10 +1,10 @@
 body {
-    background-color: lightblue;
+    background-color: #ACB26F
 }
 h1 {
     color: white;
     text-align: center;
-    font-family: Comic 
+    font-family: Comic
     font-weight: bold;
 }
 button {
@@ -17,5 +17,5 @@ img {
     height: auto;
 }
 div .panel {
-  background-color: pink
+  background-color: #E9E6CE
 }
