--- a/our_members.css
+++ b/our_members.css
@@ -1,22 +1,34 @@
 
 div.img img {
-  border-radius: 8px;
-  width: 120%;
-  height: 120%;
+  width: 90%;
+  height:120%;
+  display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+
+div.img2 img {
+  width: 40%;
+  height: 40%;
+  display: block;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 h1 {
-  color: white;
+  color: #D0B49C;
   text-align: center;
   font-family: Comic;
   font-weight: bold;
 }
 
 h2 {
-  color: white;
+  color: #BC5444;
   text-align: center;
   font-family: Comic;
   font-weight: bold;
+
 }
 
 body {
@@ -25,4 +37,13 @@ body {
 
 div.panel {
   background-color: #271211
+}
+
+p {
+  color: #D0B49C;
+text-align: center;
+}
+div.col-md-4 {
+  margin-left: auto;
+  margin-right: auto;
 }
